--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.14"
+    "@tailwindcss/vite": "^4.1.7",
+    "astro": "^5.7.14",
+    "date-fns": "^4.1.0"
   },
-  "packageManager": "pnpm@10.6.5+sha1.da220e966c2db3275efb5928cf8f3592681b106b"
+  "packageManager": "pnpm@10.6.5+sha1.da220e966c2db3275efb5928cf8f3592681b106b",
+  "devDependencies": {
+    "@astrojs/mdx": "^4.2.6",
+    "tailwindcss": "^4.1.7"
+  }
 }
