Unify global heading styles and update vibe coding definition
- Set all prose headings (h1–h4) to bold and consistent font sizes globally; underlined h2 is now default everywhere
- Removed redundant prose-h2/prose-headings classes from layouts
- Fixed canonicalURL prop type in SeriesLayout.astro for Astro v5+ compatibility
- Updated the definition of "vibe coding" on the about page to match the article's precise explanation
- Corrected CHANGELOG timestamps to reflect actual change times

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "astro": "^5.7.14",
-    "date-fns": "^4.1.0"
+    "date-fns": "^4.1.0",
+    "shiki": "^3.4.2"
   },
   "packageManager": "pnpm@10.6.5+sha1.da220e966c2db3275efb5928cf8f3592681b106b",
   "devDependencies": {
