--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@tailwindcss/vite": "^4.1.7",
     "astro": "^5.7.14",
     "date-fns": "^4.1.0",
-    "shiki": "^3.4.2"
+    "shiki": "^3.4.2",
+    "typescript": "^5.8.3"
   },
   "packageManager": "pnpm@10.6.5+sha1.da220e966c2db3275efb5928cf8f3592681b106b",
   "devDependencies": {
