chore(deps,scripts): update dependencies and validation script
- Update package.json and pnpm-lock.yaml for latest dependencies
- Update scripts/validate-article.cjs for improved article validation

Keeps dependencies current and improves content validation workflow.

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "astro": "^5.7.14",
     "date-fns": "^4.1.0",
     "shiki": "^3.4.2",
+    "string-similarity": "^4.0.4",
     "typescript": "^5.8.3"
   },
   "packageManager": "pnpm@10.6.5+sha1.da220e966c2db3275efb5928cf8f3592681b106b",
   "devDependencies": {
     "@astrojs/mdx": "^4.2.6",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "tsx": "^4.20.2"
   }
 }
